<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_camera_alt_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_slideshow_24"
            android:title="@string/profile" />


        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_baseline_add_reaction_24"
            android:title="@string/offers" />

        <item
            android:id="@+id/nav_new_product"
            android:icon="@drawable/ic_baseline_new_releases_24"
            android:title="@string/new_products" />

        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:title="@string/my_orders" />

        <item
            android:id="@+id/nav_my_carts"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/my_carts" />

        <item
            android:id="@+id/logOut"
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:title="@string/logOut"/>

    </group>
</menu>